[package]
name = "tindi"
version = "0.4.1"
edition = "2021"
authors=["Jon Karrer <karrerjon@gmail.com>"]
description = "Technical Stock Chart Indicators"
license = "MIT/Apache-2.0"
repository = "https://github.com/jonkarrer/tindi"
readme = "README.md"
keywords = ["stocks", "trading", "indicators",]
categories = ["finance"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

